Add right / left styles

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -25,6 +25,10 @@ body.home > header {
 .page-header{
   margin-top: 20px!important;
 }
+
+.right {float:right;}
+.left {float:left;}
+
 /*=====================================================================
   Header
   ===================================================================== */
