--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -28,6 +28,7 @@ body.home > header {
 
 .right {float:right;}
 .left {float:left;}
+.center {float:none; margin:0px auto; text-align:center;}
 
 /*=====================================================================
   Header
