--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -358,7 +358,7 @@ body.single-album .featured-thumb img {border: 5px solid #fff;}
 
 .btn:hover,.btn-sm:hover {
 opacity: 0.8;
-color:#fff;
+color:#fff!important;
 }
 
 body.single-album .buy-panel {text-align:center;}
@@ -418,6 +418,13 @@ content: "\f04b";
 body.store .album-excerpt a {display:none;}   
 
 body.store .add_to_cart_button {width:100%; margin-bottom:15px;}
+
+body.store .album-img {
+display: block;
+overflow: hidden;
+height: 0px;
+padding-bottom: 89.8%;
+}
    
 .store-table-header{
    background-color: #0B5D6B;
