mo sot tweaks, border colors

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -998,7 +998,7 @@ width: 460px;
 
 .row-store {
 margin: 0px;
-border-bottom: 2px #045F6B solid;
+border-bottom: 2px #D3CDB8 solid;
 padding: 0px;
 }
 
