Remove header from single product

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -505,6 +505,8 @@ padding-left: 0px;
 text-align: left;
 }
 
+body.single-product .main header {display:none;} 
+
 
   /*SoundManager Css*/
   a.sm2_button {
