mo tweaks, adding styling to single product page

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -382,7 +382,8 @@ color:#fff!important;
 }
 
 body.single-album .buy-panel,
-body.music .buy-panel {
+body.music .buy-panel,
+body.single-product .buy-panel {
 text-align: center;
 background-color: #FFF;
 border: 1px solid #ECECEC;
