--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -104,9 +104,13 @@ opacity: .9;
    Navbar
    ========================================================================== */
 .nav-container{
-  background-color: #988d71!important;
+background-color: #988d71!important;
 background-image: url(../img/nav-bg.jpg)!important;
+-webkit-box-shadow: 0 0 10px 2px rgba(0,0,0,.4);
+box-shadow: 0 0 10px 2px rgba(0,0,0,.3);
+border-bottom: 1px solid rgb(189, 176, 156);
 }
+
 .navbar-default {
 background-color: #988d71!important;
 background-image: url(../img/nav-bg.jpg)!important;
@@ -325,15 +329,26 @@ p.pause:before{
   position: relative;
   top:-5px;
 }
-.bio-home{
+.bio-home {
 margin-top: 25px;
 }
-.line{
+
+.quote-text {
+font-size: 20px;
+font-weight: 100;
+text-align: center;
+margin-top: 0;
+line-height: 1.3em;
+}
+
+.line {
 background: url(../img/JA_V04-BarLong.png) no-repeat;
 width: 100%;
 padding-bottom: 5%;
 background-size: contain;
-margin: 0 1%;}
+margin: 0 1%;
+}
+
 /* ==========================================================================
    Header
    ========================================================================== */
@@ -358,7 +373,11 @@ margin-bottom: 15px;
    Content
    ========================================================================== */
 
-.content { }
+.content { 
+-webkit-box-shadow: 0 0 10px 2px rgba(0,0,0,.4);
+box-shadow: 0 0 10px 2px rgba(0,0,0,.2);
+border: 1px solid #BEBCB6;
+}
 
 /* ==========================================================================
    Albums - Single
