--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -333,7 +333,7 @@ p.pause:before{
 margin-top: 25px;
 }
 
-.quote-text {
+h3.quote-text {
 font-size: 20px;
 font-weight: 100;
 text-align: center;
