--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -131,7 +131,7 @@ letter-spacing: .3em!important;
 }
 
 .navbar-default .navbar-nav>li>a:hover {
-color: #3a5b13!important;
+color: #96800E!important;
 }
 
 .navbar-default .navbar-toggle {
@@ -147,7 +147,7 @@ background-color: #BB9B7F;
 }
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
-color: #5E9244!important;
+color: #96800E!important;
 background-color: transparent!important;
 }
 
@@ -1046,9 +1046,10 @@ h3{
 -webkit-column-count: 2;
 -webkit-column-gap : 50px;
 }
-.navbar-default .navbar-nav>li>a{
-  font-size: 18px;
-}
+
+.navbar-nav {margin-top: .3%!important;}
+.navbar-default .navbar-nav>li>a{font-size: 18px;}
+
 .store-title .preview-container {
   margin-top: 15px;
 }
