--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -377,6 +377,8 @@ background-size: contain;
 margin: 0 1%;
 }
 
+body.home song-list {display:none;}
+
 /* ==========================================================================
    Header
    ========================================================================== */
