--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -378,7 +378,7 @@ margin: 0 1%;
 }
 
 body.home .song-list {display:none;}
-
+body.home .music-wrapper h6 a {color:#fff!important;}
 /* ==========================================================================
    Header
    ========================================================================== */
