--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -506,7 +506,8 @@ content: "\f04b";
    ========================================================================== */
 
 body.store .album-excerpt a {display:none;}  
-body.store .album-excerpt {
+body.store .album-excerpt,
+body.store .song-book-excerpt {
 margin: 15px 0px;
 height: auto;
 overflow: hidden;
@@ -1163,7 +1164,8 @@ height: 0px;
 padding-bottom: 89.8%;
 }
 
-body.store .album-excerpt {
+body.store .album-excerpt,
+body.store .song-book-excerpt {
 margin-bottom: 15px;
 height: 140px;
 overflow: hidden;
@@ -1223,7 +1225,8 @@ padding: 0 11%;
 
 #mc_embed_signup label {display: none;}
 
-body.store .album-excerpt {
+body.store .album-excerpt,
+body.store .song-book-excerpt {
 margin-bottom: 15px;
 height: 0px;
 overflow: hidden;
@@ -1268,7 +1271,8 @@ padding-bottom: 32%;
 
 #mc_embed_signup label {display:block;}
 
-body.store .album-excerpt {
+body.store .album-excerpt,
+body.store .song-book-excerpt {
 margin-bottom: 15px;
 height: 84px;
 padding-bottom:0px;
