--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -92,6 +92,8 @@ h6{font-size: 14px;text-align: left;}
 a{color: #A57513;transition:color .2s ease;}
 
 .single-photos time.published {display: none!important;}
+
+body.music .page-header {display:none;}
 /*==========================================================================
   Bottom Slider Text
  ========================================================================== */
@@ -1164,10 +1166,16 @@ height: 0px;
 padding-bottom: 89.8%;
 }
 
-body.store .album-excerpt,
-body.store .song-book-excerpt {
+body.store .album-excerpt {
 margin-bottom: 15px;
 height: 140px;
+overflow: hidden;
+padding-bottom: 0px;
+}
+
+body.store .song-book-excerpt {
+margin-bottom: 15px;
+height: 330px;
 overflow: hidden;
 padding-bottom: 0px;
 }
@@ -1225,12 +1233,18 @@ padding: 0 11%;
 
 #mc_embed_signup label {display: none;}
 
-body.store .album-excerpt,
-body.store .song-book-excerpt {
+body.store .album-excerpt {
 margin-bottom: 15px;
 height: 0px;
 overflow: hidden;
 padding-bottom: 70%;
+}
+
+body.store .song-book-excerpt {
+margin-bottom: 15px;
+height: 0px;
+overflow: hidden;
+padding-bottom: 142%;
 }
 
 
@@ -1271,10 +1285,16 @@ padding-bottom: 32%;
 
 #mc_embed_signup label {display:block;}
 
-body.store .album-excerpt,
-body.store .song-book-excerpt {
+body.store .album-excerpt{
 margin-bottom: 15px;
 height: 84px;
+padding-bottom:0px;
+overflow: hidden;
+}
+
+body.store .song-book-excerpt {
+margin-bottom: 15px;
+height: 244px;
 padding-bottom:0px;
 overflow: hidden;
 }
