--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -32,6 +32,8 @@ body.home > header {
 
 a {transition:color .2s ease;}
 
+.border {border:1px solid #999;}
+
 /*=====================================================================
   Header
   ===================================================================== */
