--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1057,6 +1057,12 @@ color: #ccc!important;
 font-size: 10px;
 text-transform: uppercase;
 }
+
+#disqus_thread {
+margin-top: 0px;
+position: relative;
+}
+
 /* ==========================================================================
    Footer
    ========================================================================== */
