adjusting image to see if that's the issue, not disqus

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1058,9 +1058,8 @@ font-size: 10px;
 text-transform: uppercase;
 }
 
-#disqus_thread {
-margin-top: 0px;
-position: relative;
+img.alignleft.wp-image-494.size-thumbnail.colorbox-493 {
+float: none!important;
 }
 
 /* ==========================================================================
