--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1058,7 +1058,8 @@ font-size: 10px;
 text-transform: uppercase;
 }
 
-img.alignleft.wp-image-494.size-thumbnail.colorbox-493 {
+/* Keeps Disquis from loading ontop of image in blog posts */
+.entry-content img {
 float: none!important;
 }
 
