--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -34,6 +34,9 @@ a {transition:color .2s ease;}
 
 .border {border:1px solid #999;}
 
+.audiojs p.play {
+  background: none !important;
+}
 /*=====================================================================
   Header
   ===================================================================== */
